Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    OP_GREATER
    OP_GREATER_EQ
    OP_LESSER_EQ
    WHITESPACE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> main classe_r
Rule 2     classe_r -> classe_r classe
Rule 3     classe_r -> empty
Rule 4     main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY
Rule 5     classe -> RW_CLASS ID extends_o LCURLY var_r metodo_r RCURLY
Rule 6     extends_o -> RW_EXTENDS ID
Rule 7     extends_o -> empty
Rule 8     var -> tipo ID P_SEMICOLON
Rule 9     metodo -> RW_PUBLIC tipo ID LPAREN params_o RPAREN LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY
Rule 10    metodo_r -> metodo_r metodo
Rule 11    metodo_r -> empty
Rule 12    var_r -> var_r var
Rule 13    var_r -> empty
Rule 14    cmd_r -> cmd cmd_r
Rule 15    cmd_r -> empty
Rule 16    params -> tipo ID tipo_r
Rule 17    tipo_r -> tipo_r P_COMMA tipo ID
Rule 18    tipo_r -> empty
Rule 19    params_o -> params
Rule 20    params_o -> empty
Rule 21    tipo -> RW_INT LBRACK RBRACK
Rule 22    tipo -> RW_BOOLEAN
Rule 23    tipo -> RW_INT
Rule 24    tipo -> ID
Rule 25    cmd -> LCURLY cmd_r RCURLY
Rule 26    cmd -> RW_IF LPAREN exp RPAREN cmd
Rule 27    cmd -> RW_IF LPAREN exp RPAREN cmd RW_ELSE cmd
Rule 28    cmd -> RW_WHILE LPAREN exp RPAREN cmd
Rule 29    cmd -> RW_SOUT LPAREN exp RPAREN P_SEMICOLON
Rule 30    cmd -> ID OP_ATTR exp P_SEMICOLON
Rule 31    cmd -> ID LBRACK exp RBRACK OP_ATTR exp P_SEMICOLON
Rule 32    exp -> exp OP_AND rexp
Rule 33    exp -> rexp
Rule 34    rexp -> rexp OP_LESSER aexp
Rule 35    rexp -> rexp OP_EQUAL aexp
Rule 36    rexp -> rexp OP_NOT_EQUAL aexp
Rule 37    rexp -> aexp
Rule 38    aexp -> aexp OP_PLUS mexp
Rule 39    aexp -> aexp OP_MINUS mexp
Rule 40    aexp -> mexp
Rule 41    mexp -> mexp OP_MULTIPLY sexp
Rule 42    mexp -> mexp OP_DIVISION sexp
Rule 43    mexp -> sexp
Rule 44    sexp -> OP_NOT sexp
Rule 45    sexp -> OP_MINUS sexp
Rule 46    sexp -> RW_TRUE
Rule 47    sexp -> RW_FALSE
Rule 48    sexp -> RW_NULL
Rule 49    sexp -> NUMBER
Rule 50    sexp -> RW_NEW RW_INT LBRACK exp RBRACK
Rule 51    sexp -> pexp P_POINT RW_LENGTH
Rule 52    sexp -> pexp LBRACK exp RBRACK
Rule 53    sexp -> pexp
Rule 54    pexp -> ID
Rule 55    pexp -> RW_THIS
Rule 56    pexp -> RW_NEW ID LPAREN RPAREN
Rule 57    pexp -> LPAREN exp RPAREN
Rule 58    pexp -> pexp P_POINT ID
Rule 59    pexp -> pexp P_POINT ID LPAREN exps_o RPAREN
Rule 60    exps_o -> exps
Rule 61    exps_o -> empty
Rule 62    exps -> exp exp_r
Rule 63    exp_r -> exp_r P_COMMA exp
Rule 64    exp_r -> empty
Rule 65    empty -> <empty>

Terminals, with rules where they appear

COMMENT              : 
ID                   : 4 4 5 6 8 9 16 17 24 30 31 54 56 58 59
LBRACK               : 4 21 31 50 52
LCURLY               : 4 4 5 9 25
LPAREN               : 4 9 26 27 28 29 56 57 59
NUMBER               : 49
OP_AND               : 32
OP_ATTR              : 30 31
OP_DIVISION          : 42
OP_EQUAL             : 35
OP_GREATER           : 
OP_GREATER_EQ        : 
OP_LESSER            : 34
OP_LESSER_EQ         : 
OP_MINUS             : 39 45
OP_MULTIPLY          : 41
OP_NOT               : 44
OP_NOT_EQUAL         : 36
OP_PLUS              : 38
P_COMMA              : 17 63
P_POINT              : 51 58 59
P_SEMICOLON          : 8 9 29 30 31
RBRACK               : 4 21 31 50 52
RCURLY               : 4 4 5 9 25
RPAREN               : 4 9 26 27 28 29 56 57 59
RW_BOOLEAN           : 22
RW_CLASS             : 4 5
RW_ELSE              : 27
RW_EXTENDS           : 6
RW_FALSE             : 47
RW_IF                : 26 27
RW_INT               : 21 23 50
RW_LENGTH            : 51
RW_MAIN              : 4
RW_NEW               : 50 56
RW_NULL              : 48
RW_PUBLIC            : 4 9
RW_RETURN            : 9
RW_SOUT              : 29
RW_STATIC            : 4
RW_STRING            : 4
RW_THIS              : 55
RW_TRUE              : 46
RW_VOID              : 4
RW_WHILE             : 28
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

aexp                 : 34 35 36 37 38 39
classe               : 2
classe_r             : 1 2
cmd                  : 4 14 26 27 27 28
cmd_r                : 9 14 25
empty                : 3 7 11 13 15 18 20 61 64
exp                  : 9 26 27 28 29 30 31 31 32 50 52 57 62 63
exp_r                : 62 63
exps                 : 60
exps_o               : 59
extends_o            : 5
main                 : 1
metodo               : 10
metodo_r             : 5 10
mexp                 : 38 39 40 41 42
params               : 19
params_o             : 9
pexp                 : 51 52 53 58 59
prog                 : 0
rexp                 : 32 33 34 35 36
sexp                 : 41 42 43 44 45
tipo                 : 8 9 16 17
tipo_r               : 16 17
var                  : 12
var_r                : 5 9 12

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . main classe_r
    (4) main -> . RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    RW_CLASS        shift and go to state 3

    prog                           shift and go to state 1
    main                           shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> main . classe_r
    (2) classe_r -> . classe_r classe
    (3) classe_r -> . empty
    (65) empty -> .

    RW_CLASS        reduce using rule 65 (empty -> .)
    $end            reduce using rule 65 (empty -> .)

    classe_r                       shift and go to state 4
    empty                          shift and go to state 5

state 3

    (4) main -> RW_CLASS . ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    ID              shift and go to state 6


state 4

    (1) prog -> main classe_r .
    (2) classe_r -> classe_r . classe
    (5) classe -> . RW_CLASS ID extends_o LCURLY var_r metodo_r RCURLY

    $end            reduce using rule 1 (prog -> main classe_r .)
    RW_CLASS        shift and go to state 8

    classe                         shift and go to state 7

state 5

    (3) classe_r -> empty .

    RW_CLASS        reduce using rule 3 (classe_r -> empty .)
    $end            reduce using rule 3 (classe_r -> empty .)


state 6

    (4) main -> RW_CLASS ID . LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    LCURLY          shift and go to state 9


state 7

    (2) classe_r -> classe_r classe .

    RW_CLASS        reduce using rule 2 (classe_r -> classe_r classe .)
    $end            reduce using rule 2 (classe_r -> classe_r classe .)


state 8

    (5) classe -> RW_CLASS . ID extends_o LCURLY var_r metodo_r RCURLY

    ID              shift and go to state 10


state 9

    (4) main -> RW_CLASS ID LCURLY . RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    RW_PUBLIC       shift and go to state 11


state 10

    (5) classe -> RW_CLASS ID . extends_o LCURLY var_r metodo_r RCURLY
    (6) extends_o -> . RW_EXTENDS ID
    (7) extends_o -> . empty
    (65) empty -> .

    RW_EXTENDS      shift and go to state 13
    LCURLY          reduce using rule 65 (empty -> .)

    extends_o                      shift and go to state 12
    empty                          shift and go to state 14

state 11

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC . RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    RW_STATIC       shift and go to state 15


state 12

    (5) classe -> RW_CLASS ID extends_o . LCURLY var_r metodo_r RCURLY

    LCURLY          shift and go to state 16


state 13

    (6) extends_o -> RW_EXTENDS . ID

    ID              shift and go to state 17


state 14

    (7) extends_o -> empty .

    LCURLY          reduce using rule 7 (extends_o -> empty .)


state 15

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC . RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    RW_VOID         shift and go to state 18


state 16

    (5) classe -> RW_CLASS ID extends_o LCURLY . var_r metodo_r RCURLY
    (12) var_r -> . var_r var
    (13) var_r -> . empty
    (65) empty -> .

    RW_INT          reduce using rule 65 (empty -> .)
    RW_BOOLEAN      reduce using rule 65 (empty -> .)
    ID              reduce using rule 65 (empty -> .)
    RCURLY          reduce using rule 65 (empty -> .)
    RW_PUBLIC       reduce using rule 65 (empty -> .)

    var_r                          shift and go to state 19
    empty                          shift and go to state 20

state 17

    (6) extends_o -> RW_EXTENDS ID .

    LCURLY          reduce using rule 6 (extends_o -> RW_EXTENDS ID .)


state 18

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID . RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    RW_MAIN         shift and go to state 21


state 19

    (5) classe -> RW_CLASS ID extends_o LCURLY var_r . metodo_r RCURLY
    (12) var_r -> var_r . var
    (10) metodo_r -> . metodo_r metodo
    (11) metodo_r -> . empty
    (8) var -> . tipo ID P_SEMICOLON
    (65) empty -> .
    (21) tipo -> . RW_INT LBRACK RBRACK
    (22) tipo -> . RW_BOOLEAN
    (23) tipo -> . RW_INT
    (24) tipo -> . ID

    RCURLY          reduce using rule 65 (empty -> .)
    RW_PUBLIC       reduce using rule 65 (empty -> .)
    RW_INT          shift and go to state 27
    RW_BOOLEAN      shift and go to state 28
    ID              shift and go to state 22

    metodo_r                       shift and go to state 23
    var                            shift and go to state 24
    empty                          shift and go to state 25
    tipo                           shift and go to state 26

state 20

    (13) var_r -> empty .

    RW_INT          reduce using rule 13 (var_r -> empty .)
    RW_BOOLEAN      reduce using rule 13 (var_r -> empty .)
    ID              reduce using rule 13 (var_r -> empty .)
    RCURLY          reduce using rule 13 (var_r -> empty .)
    RW_PUBLIC       reduce using rule 13 (var_r -> empty .)
    LCURLY          reduce using rule 13 (var_r -> empty .)
    RW_IF           reduce using rule 13 (var_r -> empty .)
    RW_WHILE        reduce using rule 13 (var_r -> empty .)
    RW_SOUT         reduce using rule 13 (var_r -> empty .)
    RW_RETURN       reduce using rule 13 (var_r -> empty .)


state 21

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN . LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    LPAREN          shift and go to state 29


state 22

    (24) tipo -> ID .

    ID              reduce using rule 24 (tipo -> ID .)


state 23

    (5) classe -> RW_CLASS ID extends_o LCURLY var_r metodo_r . RCURLY
    (10) metodo_r -> metodo_r . metodo
    (9) metodo -> . RW_PUBLIC tipo ID LPAREN params_o RPAREN LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY

    RCURLY          shift and go to state 30
    RW_PUBLIC       shift and go to state 32

    metodo                         shift and go to state 31

state 24

    (12) var_r -> var_r var .

    RW_INT          reduce using rule 12 (var_r -> var_r var .)
    RW_BOOLEAN      reduce using rule 12 (var_r -> var_r var .)
    ID              reduce using rule 12 (var_r -> var_r var .)
    RCURLY          reduce using rule 12 (var_r -> var_r var .)
    RW_PUBLIC       reduce using rule 12 (var_r -> var_r var .)
    LCURLY          reduce using rule 12 (var_r -> var_r var .)
    RW_IF           reduce using rule 12 (var_r -> var_r var .)
    RW_WHILE        reduce using rule 12 (var_r -> var_r var .)
    RW_SOUT         reduce using rule 12 (var_r -> var_r var .)
    RW_RETURN       reduce using rule 12 (var_r -> var_r var .)


state 25

    (11) metodo_r -> empty .

    RCURLY          reduce using rule 11 (metodo_r -> empty .)
    RW_PUBLIC       reduce using rule 11 (metodo_r -> empty .)


state 26

    (8) var -> tipo . ID P_SEMICOLON

    ID              shift and go to state 33


state 27

    (21) tipo -> RW_INT . LBRACK RBRACK
    (23) tipo -> RW_INT .

    LBRACK          shift and go to state 34
    ID              reduce using rule 23 (tipo -> RW_INT .)


state 28

    (22) tipo -> RW_BOOLEAN .

    ID              reduce using rule 22 (tipo -> RW_BOOLEAN .)


state 29

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN . RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    RW_STRING       shift and go to state 35


state 30

    (5) classe -> RW_CLASS ID extends_o LCURLY var_r metodo_r RCURLY .

    RW_CLASS        reduce using rule 5 (classe -> RW_CLASS ID extends_o LCURLY var_r metodo_r RCURLY .)
    $end            reduce using rule 5 (classe -> RW_CLASS ID extends_o LCURLY var_r metodo_r RCURLY .)


state 31

    (10) metodo_r -> metodo_r metodo .

    RCURLY          reduce using rule 10 (metodo_r -> metodo_r metodo .)
    RW_PUBLIC       reduce using rule 10 (metodo_r -> metodo_r metodo .)


state 32

    (9) metodo -> RW_PUBLIC . tipo ID LPAREN params_o RPAREN LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY
    (21) tipo -> . RW_INT LBRACK RBRACK
    (22) tipo -> . RW_BOOLEAN
    (23) tipo -> . RW_INT
    (24) tipo -> . ID

    RW_INT          shift and go to state 27
    RW_BOOLEAN      shift and go to state 28
    ID              shift and go to state 22

    tipo                           shift and go to state 36

state 33

    (8) var -> tipo ID . P_SEMICOLON

    P_SEMICOLON     shift and go to state 37


state 34

    (21) tipo -> RW_INT LBRACK . RBRACK

    RBRACK          shift and go to state 38


state 35

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING . LBRACK RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    LBRACK          shift and go to state 39


state 36

    (9) metodo -> RW_PUBLIC tipo . ID LPAREN params_o RPAREN LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY

    ID              shift and go to state 40


state 37

    (8) var -> tipo ID P_SEMICOLON .

    RW_INT          reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    RW_BOOLEAN      reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    ID              reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    RCURLY          reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    RW_PUBLIC       reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    LCURLY          reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    RW_IF           reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    RW_WHILE        reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    RW_SOUT         reduce using rule 8 (var -> tipo ID P_SEMICOLON .)
    RW_RETURN       reduce using rule 8 (var -> tipo ID P_SEMICOLON .)


state 38

    (21) tipo -> RW_INT LBRACK RBRACK .

    ID              reduce using rule 21 (tipo -> RW_INT LBRACK RBRACK .)


state 39

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK . RBRACK ID RPAREN LCURLY cmd RCURLY RCURLY

    RBRACK          shift and go to state 41


state 40

    (9) metodo -> RW_PUBLIC tipo ID . LPAREN params_o RPAREN LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY

    LPAREN          shift and go to state 42


state 41

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK . ID RPAREN LCURLY cmd RCURLY RCURLY

    ID              shift and go to state 43


state 42

    (9) metodo -> RW_PUBLIC tipo ID LPAREN . params_o RPAREN LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY
    (19) params_o -> . params
    (20) params_o -> . empty
    (16) params -> . tipo ID tipo_r
    (65) empty -> .
    (21) tipo -> . RW_INT LBRACK RBRACK
    (22) tipo -> . RW_BOOLEAN
    (23) tipo -> . RW_INT
    (24) tipo -> . ID

    RPAREN          reduce using rule 65 (empty -> .)
    RW_INT          shift and go to state 27
    RW_BOOLEAN      shift and go to state 28
    ID              shift and go to state 22

    tipo                           shift and go to state 44
    params_o                       shift and go to state 45
    params                         shift and go to state 46
    empty                          shift and go to state 47

state 43

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID . RPAREN LCURLY cmd RCURLY RCURLY

    RPAREN          shift and go to state 48


state 44

    (16) params -> tipo . ID tipo_r

    ID              shift and go to state 49


state 45

    (9) metodo -> RW_PUBLIC tipo ID LPAREN params_o . RPAREN LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY

    RPAREN          shift and go to state 50


state 46

    (19) params_o -> params .

    RPAREN          reduce using rule 19 (params_o -> params .)


state 47

    (20) params_o -> empty .

    RPAREN          reduce using rule 20 (params_o -> empty .)


state 48

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN . LCURLY cmd RCURLY RCURLY

    LCURLY          shift and go to state 51


state 49

    (16) params -> tipo ID . tipo_r
    (17) tipo_r -> . tipo_r P_COMMA tipo ID
    (18) tipo_r -> . empty
    (65) empty -> .

    P_COMMA         reduce using rule 65 (empty -> .)
    RPAREN          reduce using rule 65 (empty -> .)

    tipo_r                         shift and go to state 52
    empty                          shift and go to state 53

state 50

    (9) metodo -> RW_PUBLIC tipo ID LPAREN params_o RPAREN . LCURLY var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY

    LCURLY          shift and go to state 54


state 51

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY . cmd RCURLY RCURLY
    (25) cmd -> . LCURLY cmd_r RCURLY
    (26) cmd -> . RW_IF LPAREN exp RPAREN cmd
    (27) cmd -> . RW_IF LPAREN exp RPAREN cmd RW_ELSE cmd
    (28) cmd -> . RW_WHILE LPAREN exp RPAREN cmd
    (29) cmd -> . RW_SOUT LPAREN exp RPAREN P_SEMICOLON
    (30) cmd -> . ID OP_ATTR exp P_SEMICOLON
    (31) cmd -> . ID LBRACK exp RBRACK OP_ATTR exp P_SEMICOLON

    LCURLY          shift and go to state 56
    RW_IF           shift and go to state 58
    RW_WHILE        shift and go to state 59
    RW_SOUT         shift and go to state 60
    ID              shift and go to state 55

    cmd                            shift and go to state 57

state 52

    (16) params -> tipo ID tipo_r .
    (17) tipo_r -> tipo_r . P_COMMA tipo ID

    RPAREN          reduce using rule 16 (params -> tipo ID tipo_r .)
    P_COMMA         shift and go to state 61


state 53

    (18) tipo_r -> empty .

    P_COMMA         reduce using rule 18 (tipo_r -> empty .)
    RPAREN          reduce using rule 18 (tipo_r -> empty .)


state 54

    (9) metodo -> RW_PUBLIC tipo ID LPAREN params_o RPAREN LCURLY . var_r cmd_r RW_RETURN exp P_SEMICOLON RCURLY
    (12) var_r -> . var_r var
    (13) var_r -> . empty
    (65) empty -> .

    LCURLY          reduce using rule 65 (empty -> .)
    RW_IF           reduce using rule 65 (empty -> .)
    RW_WHILE        reduce using rule 65 (empty -> .)
    RW_SOUT         reduce using rule 65 (empty -> .)
    ID              reduce using rule 65 (empty -> .)
    RW_INT          reduce using rule 65 (empty -> .)
    RW_BOOLEAN      reduce using rule 65 (empty -> .)
    RW_RETURN       reduce using rule 65 (empty -> .)

    var_r                          shift and go to state 62
    empty                          shift and go to state 20

state 55

    (30) cmd -> ID . OP_ATTR exp P_SEMICOLON
    (31) cmd -> ID . LBRACK exp RBRACK OP_ATTR exp P_SEMICOLON

    OP_ATTR         shift and go to state 63
    LBRACK          shift and go to state 64


state 56

    (25) cmd -> LCURLY . cmd_r RCURLY
    (14) cmd_r -> . cmd cmd_r
    (15) cmd_r -> . empty
    (25) cmd -> . LCURLY cmd_r RCURLY
    (26) cmd -> . RW_IF LPAREN exp RPAREN cmd
    (27) cmd -> . RW_IF LPAREN exp RPAREN cmd RW_ELSE cmd
    (28) cmd -> . RW_WHILE LPAREN exp RPAREN cmd
    (29) cmd -> . RW_SOUT LPAREN exp RPAREN P_SEMICOLON
    (30) cmd -> . ID OP_ATTR exp P_SEMICOLON
    (31) cmd -> . ID LBRACK exp RBRACK OP_ATTR exp P_SEMICOLON
    (65) empty -> .

    LCURLY          shift and go to state 56
    RW_IF           shift and go to state 58
    RW_WHILE        shift and go to state 59
    RW_SOUT         shift and go to state 60
    ID              shift and go to state 55
    RCURLY          reduce using rule 65 (empty -> .)

    cmd_r                          shift and go to state 65
    cmd                            shift and go to state 66
    empty                          shift and go to state 67

state 57

    (4) main -> RW_CLASS ID LCURLY RW_PUBLIC RW_STATIC RW_VOID RW_MAIN LPAREN RW_STRING LBRACK RBRACK ID RPAREN LCURLY cmd . RCURLY RCURLY

    RCURLY          shift and go to state 68


state 58

    (26) cmd -> RW_IF . LPAREN exp RPAREN cmd
    (27) cmd -> RW_IF . LPAREN exp RPAREN cmd RW_ELSE cmd

    LPAREN          shift and go to state 69


state 59

    (28) cmd -> RW_WHILE . LPAREN exp RPAREN cmd

    LPAREN          shift and go to state 70


state 60

    (29) cmd -> RW_SOUT . LPAREN exp RPAREN P_SEMICOLON

    LPAREN          shift and go to state 71


state 61

    (17) tipo_r -> tipo_r P_COMMA . tipo ID
    (21) tipo -> . RW_INT LBRACK RBRACK
    (22) tipo -> . RW_BOOLEAN
    (23) tipo -> . RW_INT
    (24) tipo -> . ID

    RW_INT          shift and go to state 27
    RW_BOOLEAN      shift and go to state 28
    ID              shift and go to state 22

    tipo                           shift and go to state 72

state 62

    (9) metodo -> RW_PUBLIC tipo ID LPAREN params_o RPAREN LCURLY var_r . cmd_r RW_RETURN exp P_SEMICOLON RCURLY
    (12) var_r -> var_r . var
    (14) cmd_r -> . cmd cmd_r
    (15) cmd_r -> . empty
    (8) var -> . tipo ID P_SEMICOLON
    (25) cmd -> . LCURLY cmd_r RCURLY
    (26) cmd -> . RW_IF LPAREN exp RPAREN cmd
    (27) cmd -> . RW_IF LPAREN exp RPAREN cmd RW_ELSE cmd
    (28) cmd -> . RW_WHILE LPAREN exp RPAREN cmd
    (29) cmd -> . RW_SOUT LPAREN exp RPAREN P_SEMICOLON
    (30) cmd -> . ID OP_ATTR exp P_SEMICOLON
    (31) cmd -> . ID LBRACK exp RBRACK OP_ATTR exp P_SEMICOLON
    (65) empty -> .
    (21) tipo -> . RW_INT LBRACK RBRACK
    (22) tipo -> . RW_BOOLEAN
    (23) tipo -> . RW_INT
    (24) tipo -> . ID

    LCURLY          shift and go to state 56
    RW_IF           shift and go to state 58
    RW_WHILE        shift and go to state 59
    RW_SOUT         shift and go to state 60
    ID              shift and go to state 73
    RW_RETURN       reduce using rule 65 (empty -> .)
    RW_INT          shift and go to state 27
    RW_BOOLEAN      shift and go to state 28

    tipo                           shift and go to state 26
    cmd_r                          shift and go to state 74
    var                            shift and go to state 24
    cmd                            shift and go to state 66
    empty                          shift and go to state 67

state 63
